unpackaged/main/default/objects/CaseOpportunity__c/CaseOpportunity__c.object-meta.xml
<CustomObject>
    <description>Junction object between Opportunities and Cases to allow many to many relations.</description>
    <label>CaseOpportunity</label>
    <nameField>
        <label>CaseOpportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CaseOpportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>