unpackaged/main/default/objects/CaseOpportunity__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>CaseOpportunities</relationshipLabel>
    <relationshipName>CaseOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>