unpackaged/main/default/objects/CaseOpportunity__c/fields/Case_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Type__c</fullName>
    <formula>Case__r.RecordType.DeveloperName</formula>
    <label>Case Record Type</label>
    <type>Text</type>
</CustomField>