unpackaged/main/default/objects/CaseOpportunity__c/fields/IsPrimaryOppOnCase__c.field-meta.xml
<CustomField>
    <fullName>IsPrimaryOppOnCase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark Primary Opportunity on the Case</description>
    <label>IsPrimaryOppOnCase</label>
    <type>Checkbox</type>
</CustomField>