unpackaged/main/default/objects/CaseOpportunity__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>CaseOpportunities</relationshipLabel>
    <relationshipName>CaseOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>