unpackaged/main/default/objects/CaseOpportunity__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <formula>Opportunity__r.Owner.Full_Name__c</formula>
    <label>Opportunity Owner</label>
    <type>Text</type>
</CustomField>