unpackaged/main/default/objects/CaseOpportunity__c/fields/Xometry_ERP_ID__c.field-meta.xml
<CustomField>
    <fullName>Xometry_ERP_ID__c</fullName>
    <label>Quote ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>