unpackaged/main/default/objects/CaseOpportunity__c/fields/Xometry_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Xometry_Order_ID__c</fullName>
    <label>Order ID</label>
    <length>11</length>
    <type>Text</type>
</CustomField>